--- a/html-10/index.html
+++ b/html-10/index.html
@@ -21,6 +21,6 @@
   </section>
     <img src="/Public/Group 4.png">
    </main>
-   <footer></footer>
+   <footer class="rodape">Desenvolido por Aline.</footer>
 </body>
 </html>
