--- a/html-10/index.html
+++ b/html-10/index.html
@@ -7,7 +7,12 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-   <header></header> 
+   <header class="cabecalho">
+    <nav class="cabelho-nav">
+      <a class="link-nav">Home</a>
+      <a class="link-nav">Sobre mim</a>
+    </nav>
+   </header> 
    <main class="conteudo" >
     <section class="conteudo-section">
     <h1 class="titulo">Eleve seu negócio digital a outro nivel <strong class="titulo1">com um Front-end de qualidade!</strong></h1>
