--- a/html-11/about.html
+++ b/html-11/about.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="/css/about.css">
 </head>
 <body>
+    <header class="cabecalho">
+        <nav class="cabecalho-nav">
+          <a class="link-nav" href="/">Home</a>
+          <a class="link-nav" href="/about.html">Sobre mim</a>
+          <a class="link-nav" href="/curriculo.html">Curriculo</a>
+        </nav>
+       </header> 
     <main class="conteudo">
         <section class="conteudo-section">
     <h1 class="titulo">Bem-vindo à minha jornada no mundo da Tecnologia! 🚀</h1>
@@ -24,5 +31,6 @@
 </section>
 <img src="/Public/Group 4.png">
 </main>
+<footer class="rodape">Desenvolido por Aline.</footer>
 </body>
 </html>
