--- a/html-11/curriculo.html
+++ b/html-11/curriculo.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculo</title>
     <link rel="stylesheet" href="css/curriculo.css">
+    <link rel="shortcut icon" href="/Public/icons8-circled-a-32.png" type="image/x-icon">
 </head>
     <body>
         <header class="cabecalho">
