--- a/html-12/curriculo.html
+++ b/html-12/curriculo.html
@@ -24,7 +24,7 @@
                 Nome: Aline Beatriz
                 Idade: 20 anos <br>
         Local de Residência: Recife, Pernambuco<br>
-        E-mail: <a href="mailto:alinebeatriz875@gmail.com">alinebeatriz875@gmail.com</a><br>
+        E-mail: <a href="mailto:alinebeatriz875@gmail.com" class="link">alinebeatriz875@gmail.com</a><br>
         Telefone: (81) 99354-5216
         </p>
         <h3>Educação:</h3>
