--- a/html-14/curriculo.html
+++ b/html-14/curriculo.html
@@ -57,8 +57,7 @@
             <h3>Idiomas:</h3>
 
             <p class="texto">
-            Inglês: [A2]
-            Espanhol: [A1]
+            Inglês: [A2] Espanhol: [A1]
             </p>
             <h3>Resumo Profissional:</h3>
             <p class="texto">
@@ -68,16 +67,13 @@
             <h3>Projetos Pessoais:</h3>
             <p class="texto">
                 <a class="link" href="https://github.com/Aline875" class="texto">Github</a>
-
             </p>
-
             <h3>Interesses:</h3>
             <p class="texto">
             Desenvolvimento Web<br>
             Tecnologia<br>
             Inovação
             </p>
-
                 </section>
                 <img src="/Public/Group 4.png" class="perfil">
                 </main>
