--- a/html-14/about.html
+++ b/html-14/about.html
@@ -30,7 +30,7 @@
             Se você está procurando colaboradores para projetos inovadores ou simplesmente deseja trocar ideias sobre o mundo tech, estou sempre aberta a novas conexões. Vamos construir o futuro juntos! 🌐✨
         </p>
     </section>
-    <img src="/Public/Group 4.png">
+    <img src="/Public/Group 4.png" class="perfil">
     </main>
     <footer class="rodape">Desenvolido por Aline.</footer>
     </body>
