--- a/html-16/curriculo.html
+++ b/html-16/curriculo.html
@@ -17,7 +17,7 @@
                     </header> 
                     <main class="conteudo">
                         <section class="conteudo-section">
-                    <h1 class="titulo">Explorando o Mundo da Tecnologia: Uma Visão Profissional</h1>
+                    <h1 class="titulo">Explorando o Mundo da Tecnologia: <strong class="titulo1">Uma Visão Profissional</strong></h1>
                     
                     <h2>Informações Pessoais:</h2>
                     <p class="texto">
@@ -75,7 +75,9 @@
             Inovação
             </p>
                 </section>
+                <div class="img">
                 <img src="/Public/Group 4.png" class="perfil">
+            </div>
                 </main>
                 <footer class="rodape">Desenvolido por Aline.</footer>
             </body>
