--- a/html-16/index.html
+++ b/html-16/index.html
@@ -18,12 +18,12 @@
     <main class="conteudo" >
       <section class="conteudo-section">
       <h1 class="titulo">Eleve seu negócio digital a outro nivel <strong class="titulo1">com um Front-end de qualidade!</strong></h1>
-      <p class="texto">Óla me chamo Aline Beatriz, tenho 20 anos e sou estudante de Sistemas de informação. Sou apaixonada por tecnologia desde criança, pretendo seguir na área de Front-end e mais tarde iniciar minha carreira em Back-end. Atualmente tenho especialidade em <strong class="titulo1"> React, Next.js, c#, angular, javaScript, html, css e python.</strong></p>
+      <p class="texto">Óla me chamo Aline Beatriz, tenho 20 anos e sou estudante de Sistemas de informação. Apaixonada por tecnologia desde criança, pretendo seguir na área de Front-end e mais tarde iniciar minha carreira em Back-end. Atualmente tenho especialidade em <strong class="titulo1"> React, Next.js, c#, angular, javaScript, html, css e python.</strong></p>
       <div class="botao">
         <h2 class="titulo2">Acesse minhas redes!</h2>
-      <a class="link" href="https://github.com/Aline875"><img src="/Public/github.png" class="imagen-git"></a>
-      <a class="link" href="https://www.linkedin.com/in/aline-beatriz-8543a3177/"> <img src="/Public/linkedin.png"></a>
-      <a class="link" href="mailto:alinebeatriz875@gmail.com"><img src="/Public/email.png"></a>
+      <a class="link" href="https://github.com/Aline875"><img src="/Public/icons8-github-32.png" class="imagen-git"></a>
+      <a class="link" href="https://www.linkedin.com/in/aline-beatriz-8543a3177/"> <img src="/Public/icons8-linkedin-32.png"></a>
+      <a class="link" href="mailto:alinebeatriz875@gmail.com"><img src="/Public/icons8-mensagem-32.png"></a>
     </div>
     </section>
       <img src="/Public/Group 4.png">
