--- a/responsividade-1/index.html
+++ b/responsividade-1/index.html
@@ -8,6 +8,14 @@
     <link rel="shortcut icon" href="/Public/icons8-literatura-32.png" type="image/x-icon">
 </head>
 <body>
-    
+    <header class="cabecalho">
+        <span class="menu-hamburguer"></span>
+        <img src="/Public/Logo.svg" alt="Logo da Alura">
+        <a href="#"><img src="/Public/Favoritos.svg"></a>
+        <a href="#"><img src="/Public/Compras.svg"></a>
+        <a href="#"><img src="/Public/Usuario.svg"></a>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
