--- a/responsividade-1/index.html
+++ b/responsividade-1/index.html
@@ -4,16 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AluraBooks</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="/Public/icons8-literatura-32.png" type="image/x-icon">
 </head>
 <body>
     <header class="cabecalho">
-        <span class="menu-hamburguer"></span>
-        <img src="/Public/Logo.svg" alt="Logo da Alura">
-        <a href="#"><img src="/Public/Favoritos.svg"></a>
-        <a href="#"><img src="/Public/Compras.svg"></a>
-        <a href="#"><img src="/Public/Usuario.svg"></a>
+        <div class="container">
+            <input type="checkbox" id="menu" class="botao-container">
+            <label for="menu" >
+        <span class="menu-hamburguer imagem-container "></span>
+    </label>
+    <ul class="lista-menu">
+       <li class="lista-menu-titulo">Categorias</li>
+       <li class="lista-menu-item">
+        <a href="lista-menu-link">Programação</a>
+    </li>
+       <li class="lista-menu-item">
+        <a href="lista-menu-link">Front-End</a>
+    </li>
+       <li class="lista-menu-item">
+        <a href="lista-menu-link">Infraestrutura</a>
+    </li>
+    <li class="lista-menu-item">
+        <a href="lista-menu-link">Business</a>
+    </li>
+    <li class="lista-menu-item">
+        <a href="lista-menu-link">Design & Ux</a>
+    </li>
+    </ul>
+        <img src="/Public/Logo.svg" alt="Logo da AluraBoo">
+    </div>
+    <div class="container">
+        <a href="#"><img src="/Public/Favoritos.svg" alt="Meus favoritos" class="imagem-container"></a>
+        <a href="#"><img src="/Public/Compras.svg" alt="Carrinho de compras" class="imagem-container"></a>
+        <a href="#"><img src="/Public/Usuario.svg" alt="Meu Perfil" class="imagem-container"></a>
+    </div>
     </header>
     <main></main>
     <footer></footer>
