--- a/responsividade-1/index.html
+++ b/responsividade-1/index.html
@@ -18,22 +18,22 @@
     <ul class="lista-menu">
        <li class="lista-menu-titulo">Categorias</li>
        <li class="lista-menu-item">
-        <a href="lista-menu-link">Programação</a>
+        <a href="#" class="lista-menu-link">Programação</a>
     </li>
        <li class="lista-menu-item">
-        <a href="lista-menu-link">Front-End</a>
+        <a href="#" class="lista-menu-link">Front-End</a>
     </li>
        <li class="lista-menu-item">
-        <a href="lista-menu-link">Infraestrutura</a>
+        <a href="#" class="lista-menu-link">Infraestrutura</a>
     </li>
     <li class="lista-menu-item">
-        <a href="lista-menu-link">Business</a>
+        <a href="#" class="lista-menu-link">Business</a>
     </li>
     <li class="lista-menu-item">
-        <a href="lista-menu-link">Design & Ux</a>
+        <a href="#" class="lista-menu-link">Design & Ux</a>
     </li>
     </ul>
-        <img src="/Public/Logo.svg" alt="Logo da AluraBoo">
+        <img src="/Public/Logo.svg" alt="Logo da AluraBooks">
     </div>
     <div class="container">
         <a href="#"><img src="/Public/Favoritos.svg" alt="Meus favoritos" class="imagem-container"></a>
