--- a/responsividade-1/index.html
+++ b/responsividade-1/index.html
@@ -41,7 +41,13 @@
         <a href="#"><img src="/Public/Usuario.svg" alt="Meu Perfil" class="imagem-container"></a>
     </div>
     </header>
-    <main></main>
+    <main>
+        <section class="banner">
+            <h2 class="banner-titulo">Já sabe por onde começar?</h2>
+            <p class="banner-texto">Encontre em nossa estante o que você precisa para o seu desenvolvimento!</p>
+            <input type="search" class="banner-pesquisa" placeholder="Qual será a sua proxima leitura?">
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
