--- a/responsividade-1/index.html
+++ b/responsividade-1/index.html
@@ -6,6 +6,7 @@
     <title>AluraBooks</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <link rel="shortcut icon" href="/Public/icons8-literatura-32.png" type="image/x-icon">
 </head>
 <body>
@@ -47,7 +48,33 @@
             <p class="banner-texto">Encontre em nossa estante o que você precisa para o seu desenvolvimento!</p>
             <input type="search" class="banner-pesquisa" placeholder="Qual será a sua proxima leitura?">
         </section>
+        <section class="carrossel">
+            <h2 class="carrossel-titulo">Últimos lançamentos</h2>
+            <!-- Slider main container -->
+<div class="swiper">
+    <!-- Additional required wrapper -->
+    <div class="swiper-wrapper">
+      <!-- Slides -->
+      <div class="slide-livro">Slide 1</div>
+      <div class="slide-livro">Slide 2</div>
+      <div class="slide-livro">Slide 3</div>
+      ...
+    </div>
+    <!-- If we need pagination -->
+    <div class="swiper-pagination"></div>
+  
+    <!-- If we need navigation buttons -->
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div>
+  
+    <!-- If we need scrollbar -->
+    <div class="swiper-scrollbar"></div>
+  </div>
+  
+        </section>
     </main>
     <footer></footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </body>
 </html>
