--- a/responsividade-1/index.html
+++ b/responsividade-1/index.html
@@ -53,6 +53,7 @@
             <!-- Slider main container -->
 <div class="swiper">
     <!-- Additional required wrapper -->
+    <div class="swiper-pagination"></div>
     <div class="swiper-wrapper">
       <!-- Slides -->
       <div class="swiper-slide"><img src="/Public/Liderança.svg" alt="livro Liderança do AluraBooks"></div>
@@ -63,7 +64,7 @@
       ...
     </div>
     <!-- If we need pagination -->
-    <div class="swiper-pagination"></div>
+    
   
     <!-- If we need navigation buttons -->
     <div class="swiper-button-prev"></div>
@@ -82,6 +83,11 @@
         const swiper = new Swiper('.swiper', {
         spaceBetween: 10,
         slidesPerView: 3,
+        pagination:
+        {
+            el:'.swiper-pagination',
+            type:'bullets',
+        },
       });
       </script>
 </body>
