--- a/responsividade-1/index.html
+++ b/responsividade-1/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AluraBooks</title>
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="/Public/icons8-literatura-32.png" type="image/x-icon">
 </head>
 <body>
@@ -70,8 +70,8 @@
     <div class="swiper-button-prev"></div>
     <div class="swiper-button-next"></div>
   
-    <!-- If we need scrollbar -->
-    <div class="swiper-scrollbar"></div>
+    <!-- If we need scrollbar 
+    <div class="swiper-scrollbar"></div> -->
   </div>
   
         </section>
