--- a/responsividade-1/index.html
+++ b/responsividade-1/index.html
@@ -73,8 +73,31 @@
     <!-- If we need scrollbar 
     <div class="swiper-scrollbar"></div> -->
   </div>
+  <!--1ª linha-->
+  <div class="card">
+    <!--1ª coluna-->
+    <div class="card-descricao">
+        <div class="descricao">
+            <h3 class="descricao-titulo">Talvez você se interesse por...</h3>
+            <h2 class="descricao-titulo-livro">Angular 11 e Firebase</h2>
+            <p class="texto">Construindo uma aplicação integrada com a plataforma Google.</p>
+        </div>
+        <!--2ª coluna-->
+        <img src="/Public/Angular.svg" class="descricao-imagem">
+    </div>
+    <!--2ª linha-->
+    <div class="card-botoes">
+       <ul class="botoes">
+        <li class="botoes-item"><img src="/Public//Favoritos.svg" alt="Favoritar livro"></li>
+        <li class="botoes-item"><img src="/Public/Compras.svg" alt="Adicionar ao carrinho"></li>
+       </ul>
+       <!--2ª coluna-->
+       <a href="#" class="botoes-ancora">Saiba mais</a>
+    </div>
+</div>
   
         </section>
+
     </main>
     <footer></footer>
 
