--- a/responsividade-1/index.html
+++ b/responsividade-1/index.html
@@ -80,7 +80,7 @@
         <div class="descricao">
             <h3 class="descricao-titulo">Talvez você se interesse por...</h3>
             <h2 class="descricao-titulo-livro">Angular 11 e Firebase</h2>
-            <p class="texto">Construindo uma aplicação integrada com a plataforma Google.</p>
+            <p class="descricao-texto">Construindo uma aplicação integrada com a plataforma Google.</p>
         </div>
         <!--2ª coluna-->
         <img src="/Public/Angular.svg" class="descricao-imagem">
