--- a/responsividade-1/index.html
+++ b/responsividade-1/index.html
@@ -97,7 +97,31 @@
 </div>
   
         </section>
-
+        <section class="carrossel">
+            <h2 class="carrossel-titulo">Mais vendidos</h2>
+            <!-- Slider main container -->
+<div class="swiper">
+    <!-- Additional required wrapper -->
+    <div class="swiper-pagination"></div>
+    <div class="swiper-wrapper">
+      <!-- Slides -->
+      <div class="swiper-slide"><img src="/Public/ApacheKafka.svg" alt="livro ApacheKafka do AluraBooks"></div>
+      <div class="swiper-slide"><img src="/Public/Guia Front-end.svg" alt="livro Guia Front-End do AluraBooks"></div>
+      <div class="swiper-slide"><img src="/Public/Javascript.svg" alt="livro JavaScript do AluraBooks"></div>
+      <div class="swiper-slide"><img src="/Public/Acessibilidade.svg" alt="Livro Acessibilidade do AluraBooks"></div>
+      <div class="swiper-slide"><img src="/Public/Portugol.svg" alt="Livro Portugol do AluraBooks"></div>
+      ...
+    </div>
+    <!-- If we need pagination -->
+    
+  
+    <!-- If we need navigation buttons -->
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div>
+  
+    <!-- If we need scrollbar 
+    <div class="swiper-scrollbar"></div> -->
+  </div>
     </main>
     <footer></footer>
 
