--- a/responsividade-1/index.html
+++ b/responsividade-1/index.html
@@ -188,7 +188,12 @@
     <input type="email" class="contato-email" placeholder="Cadastre seu email?">
 </Section>
     </main>
-    <footer>Grupo Alura</footer>
+
+    <hr/>
+
+    <footer class="rodape">
+        <h3 class="rodape-titulo">Grupo Alura</h2cla>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
         const swiper = new Swiper('.swiper', {
