--- a/responsividade-1 - tablet/index.html
+++ b/responsividade-1 - tablet/index.html
@@ -192,7 +192,7 @@
     <hr/>
 
     <footer class="rodape">
-        <h3 class="rodape-titulo">Grupo Alura</h2cla>
+        <h3 class="rodape-titulo">Grupo Alura</h2>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
