--- a/responsividade-1 - tablet/index.html
+++ b/responsividade-1 - tablet/index.html
@@ -35,7 +35,8 @@
         <a href="#" class="lista-menu-link">Design & Ux</a>
     </li>
     </ul>
-        <img src="/Public/Logo.svg" alt="Logo da AluraBooks">
+        <img src="/Public/Logo.svg" alt="Logo da AluraBooks"> 
+        <h1 class="container-titulo"><b class="container-titulo-bold">Alura</b>Books</h1>
     </div>
     <div class="container">
         <a href="#"><img src="/Public/Favoritos.svg" alt="Meus favoritos" class="imagem-container"></a>
