--- a/responsividade-1 - tablet/index.html
+++ b/responsividade-1 - tablet/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="/Public/icons8-literatura-32.png" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <!--header.css-->
@@ -36,8 +37,8 @@
     </li>
     </ul>
         <img src="/Public/Logo.svg" alt="Logo da AluraBooks"> 
-        <h1 class="container-titulo"><b class="container-titulo-bold">Alura</b>Books</h1>
     </div>
+    <h1 class="container-titulo"><b class="container-titulo-bold">Alura</b>Books</h1>
     <div class="container">
         <a href="#"><img src="/Public/Favoritos.svg" alt="Meus favoritos" class="imagem-container"></a>
         <a href="#"><img src="/Public/Compras.svg" alt="Carrinho de compras" class="imagem-container"></a>
