--- a/responsividade-1 - tablet/index.html
+++ b/responsividade-1 - tablet/index.html
@@ -39,8 +39,13 @@
         <img src="/Public/Logo.svg" alt="Logo da AluraBooks"> 
     </div>
     <h1 class="container-titulo"><b class="container-titulo-bold">Alura</b>Books</h1>
-    <div class="container">
-        <a href="#"><img src="/Public/Favoritos.svg" alt="Meus favoritos" class="imagem-container"></a>
+    <ul class="opcoes">
+     <li class="opcoes-item">Categorias</li>
+     <li class="opcoes-item"><a href="#" class="opcoes-link"></a>Favoritos</li>
+     <li class="opcoes-item"><a href="#" class="opcoes-link"></a>Minha estatante</li>
+    </ul>
+ <a href="#" class="opcoes-link"></a>   <div class="container">
+        <a href="#"><img src="/Public/Favoritos.svg" alt="Meus favoritos" class="imagem-container container-coracao"></a>
         <a href="#"><img src="/Public/Compras.svg" alt="Carrinho de compras" class="imagem-container"></a>
         <a href="#"><img src="/Public/Usuario.svg" alt="Meu Perfil" class="imagem-container"></a>
     </div>
