--- a/responsividade-1 - tablet/index.html
+++ b/responsividade-1 - tablet/index.html
@@ -40,7 +40,28 @@
     </div>
     <h1 class="container-titulo"><b class="container-titulo-bold">Alura</b>Books</h1>
     <ul class="opcoes">
-     <li class="opcoes-item">Categorias</li>
+    <input type="checkbox" id="opcoes-menu" class="botao-menu-opcoes">
+    <label for="opcoes-menu">
+        <li class="opcoes-item">Categorias</li>
+    </label>
+
+    <ul class="lista-menu">
+        <li class="lista-menu-item">
+         <a href="#" class="lista-menu-link">Programação</a>
+     </li>
+        <li class="lista-menu-item">
+         <a href="#" class="lista-menu-link">Front-End</a>
+     </li>
+        <li class="lista-menu-item">
+         <a href="#" class="lista-menu-link">Infraestrutura</a>
+     </li>
+     <li class="lista-menu-item">
+         <a href="#" class="lista-menu-link">Business</a>
+     </li>
+     <li class="lista-menu-item">
+         <a href="#" class="lista-menu-link">Design & Ux</a>
+     </li>
+     </ul>
      <li class="opcoes-item"><a href="#" class="opcoes-link"></a>Favoritos</li>
      <li class="opcoes-item"><a href="#" class="opcoes-link"></a>Minha estatante</li>
     </ul>
