--- a/responsividade-1 - tablet/index.html
+++ b/responsividade-1 - tablet/index.html
@@ -211,8 +211,10 @@
     </ul>
 </section>
 <Section class="contato">
+    <div class="contato-container">
     <h2 class="contato-titulo">Fique por dentro adas novidades!</h2>
     <p class="contato-descricao">Atualizações de e-books, novos livros, promoções e outros.</p>
+    </div>
     <input type="email" class="contato-email" placeholder="Cadastre seu email?">
 </Section>
     </main>
@@ -220,7 +222,34 @@
     <hr/>
 
     <footer class="rodape">
-        <h3 class="rodape-titulo">Grupo Alura</h2>
+        <h2 class="rodape-titulo">Grupo Alura</h2>
+        <ul class="lista-rodape">
+            <li class="rodape-titulo">Educação</li>
+            <li class="rodape-item"></li>
+            <li class="rodape-item"></li>
+        </ul> 
+
+        <ul class="lista-rodape"> 
+            <li class="rodape-titulo"></li>
+            <li class="rodape-item"></li>
+            <li class="rodape-item"></li>
+            <li class="rodape-item"></li>
+            <li class="rodape-item"></li>
+            <li class="rodape-item"></li>
+            <li class="rodape-item"></li>
+            <li class="rodape-item"></li>
+        </ul> 
+      
+        <ul class="lista-rodape"> 
+            <li class="rodape-titulo"></li>
+            <li class="rodape-item"></li>
+            <li class="rodape-item"></li>
+            <li class="rodape-item"></li>
+            <li class="rodape-item"></li>
+            <li class="rodape-item"></li>
+            <li class="rodape-item"></li>
+        </ul>
+
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
