--- a/responsividade-1 - tablet/index.html
+++ b/responsividade-1 - tablet/index.html
@@ -224,24 +224,51 @@
     <footer class="rodape">
         <h2 class="rodape-titulo">Grupo Alura</h2>
         <ul class="lista-rodape">
-            <li class="rodape-titulo">Educação</li>
-            <li class="rodape-item"></li>
-            <li class="rodape-item"></li>
+            <li class="rodape-titulo-lista">Educação</li>
+            <li class="rodape-item">
+                <img src="/Public/CasaDoCodigo.svg" alt="Logo da Casa do código">
+                <a class="rodape-link" href="#">Casa do código</a>
+            </li>
+            <li class="rodape-item">
+                <img src="/Public/Caelum.svg" alt="Logo da Caelum">
+                <a class="rodape-link" href="#">Caelum</a>
+            </li>
         </ul> 
 
         <ul class="lista-rodape"> 
-            <li class="rodape-titulo"></li>
-            <li class="rodape-item"></li>
-            <li class="rodape-item"></li>
-            <li class="rodape-item"></li>
-            <li class="rodape-item"></li>
-            <li class="rodape-item"></li>
-            <li class="rodape-item"></li>
-            <li class="rodape-item"></li>
+            <li class="rodape-titulo-lista">Educação Online</li>
+            <li class="rodape-item">
+                <img src="/Public/Alura.svg" alt="Logo da Alura">
+                <a href="#" class="rodape-link">Alura</a>
+            </li>
+            <li class="rodape-item">
+                <img src="/Public/AluraEmpresas.svg" alt="Logo da Alura para empresas">
+                <a href="#" class="rodape-link">Alura Para Empresas</a>
+            </li>
+            <li class="rodape-item">
+                <img src="/Public/AluraLATAM.svg" alt="Logo da Alura LATAM">
+                <a href="#" class="rodape-link">Alura LATAM</a>
+            </li>
+            <li class="rodape-item">
+                <img src="/Public/AluraStart.svg" alt="Logo da Alura Start">
+                <a href="#" class="rodape-link">Alura Start</a>
+            </li>
+            <li class="rodape-item">
+                <img src="/Public/MusicDot.svg" alt="Logo da MusicDot">
+                <a href="#" class="rodape-link">MusicDot</a>
+            </li>
+            <li class="rodape-item">
+                <img src="/Public/AluraLingua.svg" alt="Logo da Alura Linguas">
+                <a href="#" class="rodape-link">Alura Linguas</a>
+            </li>
+            <li class="rodape-item">
+                <img src="/Public/PM3.svg" alt="Logo da PM3">
+                <a href="#" class="rodape-link">PM3</a>
+            </li>
         </ul> 
       
         <ul class="lista-rodape"> 
-            <li class="rodape-titulo"></li>
+            <li class="rodape-titulo-lista"></li>
             <li class="rodape-item"></li>
             <li class="rodape-item"></li>
             <li class="rodape-item"></li>
