--- a/responsividade-1 - tablet/index.html
+++ b/responsividade-1 - tablet/index.html
@@ -268,13 +268,35 @@
         </ul> 
       
         <ul class="lista-rodape"> 
-            <li class="rodape-titulo-lista"></li>
-            <li class="rodape-item"></li>
-            <li class="rodape-item"></li>
-            <li class="rodape-item"></li>
-            <li class="rodape-item"></li>
-            <li class="rodape-item"></li>
-            <li class="rodape-item"></li>
+            <li class="rodape-titulo-lista">Comunidade</li>
+            <li class="rodape-item">
+                <img src="/Public/HipstersTech.svg" alt="Logo da Hispsters ponto tech">
+                <a href="#" class="rodape-link">Hispsters ponto tech</a>
+            </li>
+            <li class="rodape-item">
+                <img src="/Public/ScubaDev.svg" alt="Logo da Scuba Dev">
+                <a href="#" class="rodape-link">Scuba Dev</a>
+            </li>
+            <li class="rodape-item">
+                <img src="/Public/LayersTech.svg" alt="Logo da Layers ponto Tech">
+                <a href="#" class="rodape-link">Layers ponto Tech</a>
+            </li>
+            <li class="rodape-item">
+                <img src="/Public/LikeABoss.svg" alt="Logo da Like a Boss">
+                <a href="#" class="rodape-link">Like a Boss</a>
+            </li>
+            <li class="rodape-item">
+                <img src="/Public/CarreiraSemFronteira.svg" alt="Logo da Carreiras sem fronteiras">
+                <a href="#" class="rodape-link">Carreiras sem fronteiras</a>
+            </li>
+            <li class="rodape-item">
+                <img src="/Public/HipstersJobs.svg" alt="Logo da Hipsters ponto jobs">
+                <a href="#" class="rodape-link">Hipsters ponto jobs</a>
+            </li>
+            <li class="rodape-item">
+                <img src="/Public/GUJ.svg" alt="Logo da GUJ">
+                <a href="#" class="rodape-link">GUJ</a>
+            </li>
         </ul>
 
     </footer>
