--- a/responsividade-1 - desktop/index.html
+++ b/responsividade-1 - desktop/index.html
@@ -65,10 +65,15 @@
      <li class="opcoes-item"><a href="#" class="opcoes-link"></a>Favoritos</li>
      <li class="opcoes-item"><a href="#" class="opcoes-link"></a>Minha estatante</li>
     </ul>
- <a href="#" class="opcoes-link"></a>   <div class="container">
+ <a href="#" class="opcoes-link"></a> 
+   <div class="container">
         <a href="#"><img src="/Public/Favoritos.svg" alt="Meus favoritos" class="imagem-container container-coracao"></a>
-        <a href="#"><img src="/Public/Compras.svg" alt="Carrinho de compras" class="imagem-container"></a>
-        <a href="#"><img src="/Public/Usuario.svg" alt="Meu Perfil" class="imagem-container"></a>
+        <a href="# " class="container-link"><img src="/Public/Compras.svg" alt="Carrinho de compras" class="imagem-container">
+            <p class="container-texto">Minha Sacola</p>
+        </a>
+        <a href="#" class="container-link"><img src="/Public/Usuario.svg" alt="Meu Perfil" class="imagem-container">
+            <p class="container-texto">Meu Perfil</p>
+        </a>
     </div>
     </header>
     <!--header.css-->
