--- a/responsividade-1 - desktop/index.html
+++ b/responsividade-1 - desktop/index.html
@@ -89,7 +89,8 @@
         <section class="carrossel">
             <h2 class="carrossel-titulo">Últimos lançamentos</h2>
             <!-- Slider main container -->
-<div class="swiper">
+ <div class="carrossel-container">
+  <div class="swiper">
     <!-- Additional required wrapper -->
     <div class="swiper-pagination"></div>
     <div class="swiper-wrapper">
@@ -116,7 +117,7 @@
     <!--1ª coluna-->
     <div class="card-descricao">
         <div class="descricao">
-            <h3 class="descricao-titulo">Talvez você se interesse por...</h3>
+            <h3 class="descricao-titulo">Talvez você também se interesse por...</h3>
             <h2 class="descricao-titulo-livro">Angular 11 e Firebase</h2>
             <p class="descricao-texto">Construindo uma aplicação integrada com a plataforma Google.</p>
         </div>
@@ -132,12 +133,12 @@
        <!--2ª coluna-->
        <a href="#" class="botoes-ancora">Saiba mais</a>
     </div>
-</div>
-  
+  </div>
+</div>  
         </section>
         <section class="carrossel">
             <h2 class="carrossel-titulo">Mais vendidos</h2>
-            <!-- Slider main container -->
+            <div class="carrossel-container">            <!-- Slider main container -->
 <div class="swiper">
     <!-- Additional required wrapper -->
     <div class="swiper-pagination"></div>
@@ -183,6 +184,7 @@
        <!--2ª coluna-->
        <a href="#" class="botoes-ancora">Saiba mais</a>
     </div>
+</div>
 </div>
 </section>
 <!--carrossel.css-->
