--- a/responsividade-1 - desktop/index.html
+++ b/responsividade-1 - desktop/index.html
@@ -15,7 +15,7 @@
     <header class="cabecalho">
         <div class="container">
             <input type="checkbox" id="menu" class="botao-container">
-            <label for="menu" >
+            <label for="menu" class="container-rotulo">
         <span class="menu-hamburguer imagem-container "></span>
     </label>
     <ul class="lista-menu">
