--- a/responsividade-1 - desktop/index.html
+++ b/responsividade-1 - desktop/index.html
@@ -41,7 +41,7 @@
     <h1 class="container-titulo"><b class="container-titulo-bold">Alura</b>Books</h1>
     <ul class="opcoes">
     <input type="checkbox" id="opcoes-menu" class="botao-menu-opcoes">
-    <label for="opcoes-menu">
+    <label for="opcoes-menu" class="opcoes-rotulo">
         <li class="opcoes-item">Categorias</li>
     </label>
 
