--- a/JS-Lógica/teste.html
+++ b/JS-Lógica/teste.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Meu primeiro teste!</h1>
+    <p>
+        Seria isso um programa? Descubra isso visitando a Alura <a href="https://www.alura.com.br/">aqui</a>
+    </p>
+    <script>
+        alert ("isso sim é um programa");
+    </script>
 </body>
 </html>
