--- a/JS-Lógica/teste.html
+++ b/JS-Lógica/teste.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JavaScript</title>
+    <link rel="shortcut icon" href="/Public/icons8-javascript-32.png" type="image/x-icon">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Meu primeiro teste!</h1>
-    <p>
-        Seria isso um programa? Descubra isso visitando a Alura <a href="https://www.alura.com.br/">aqui</a>
-    </p>
+    <main>
+    <div class="container-titulo">
+      <h1 class="titulo">Meu primeiro teste!</h1>
+    </div>
+    <p class="texto">
+        Seria isso um programa? Descubra isso visitando a Alura</p>   
+        <a href="https://www.alura.com.br/" class="ancora">aqui</a>
+
+     </main>
     <script>
         alert ("isso sim é um programa");
     </script>
