--- a/JS-Lógica/teste.html
+++ b/JS-Lógica/teste.html
@@ -18,7 +18,13 @@
 
      </main>
     <script>
-        alert ("isso sim é um programa");
+        //alert ("isso sim é um programa");
+        //alert("minha idade é")
+       // alert(20)
+        document.write("minha idade é 20 <br>");
+        document.write("a idade de aline é ")
+        document.write(23+2);
+        
     </script>
 </body>
 </html>
