--- a/JS-Lógica/teste.html
+++ b/JS-Lógica/teste.html
@@ -23,8 +23,16 @@
        // alert(20)
         document.write("minha idade é 20 <br>");
         document.write("a idade de aline é ")
-        document.write(23+2);
+        document.write(23-3);
+        document.write("<br>Aline nasceu em ");
+        document.write(2024-21);
+        document.write("<br>A media das idades de uma turma do ensino medio é ")
+        document.write((16+17+15)/3) 
+        //cuidado ao fazer contas em linguagens de programação pois assim como na matematica existe uma ordem correta para divisão e multiplicação apenas lembre-se de deixar as contas que devem ser feitas primeiro entre parenteses. tambem se aplica a concatenação de textos.
         
+        document.write("<br>Aline nasceu em " + (2024-21)+"<br>");
+        document.write("Eu acertei " + 15/50*100 + "%")
+
     </script>
 </body>
 </html>
