--- a/JS-Lógica/teste.html
+++ b/JS-Lógica/teste.html
@@ -60,7 +60,13 @@
 
         //para a arredondar uma dizima periodica usamos Math.round. Exemplo
 
-        document.write("A media dasa idades é " + Math.round(media)+ "<br>")
+        document.write("A media dasa idades é " + Math.round(media)+ "<br>");
+
+        var idadeFlavio = 39
+        var idadeJoaquim = 20
+        var idadeBarney = 41
+        media = (idadeBarney + idadeFlavio + idadeJoaquim)/3
+        document.write("A idade média das idades é " + Math.round(media))
 
     </script>
 </body>
