--- a/JS-Lógica/teste.html
+++ b/JS-Lógica/teste.html
@@ -108,10 +108,20 @@
         mostra("Flavio tem "+ (ano-1977)+" anos.");
 
         pulaLinha();
-        
+
         mostra("aline tem "+ (2024 - anoN) + " anos");
 
         pulaLinha();
+
+        function mostrar(n)
+        {
+            pulaLinha()
+            document.write(n);
+            pulaLinha();
+        };
+
+        mostrar("Aline");
+        mostrar("Narinha")
     </script>
 </body>
 </html>
