--- a/JS-Lógica/teste.html
+++ b/JS-Lógica/teste.html
@@ -43,7 +43,8 @@
         document.write("narinha tem " + ( ano-2004) + " anos<br>");
         document.write("Aline nasceu em " + (anoN)+"<br>");
 
-        //exercício
+        //exercício 
+        //obs: todos  os exercícios estão recebendo somente a resolução das questões.
         var n = 5
 
         document.write("O resultado da formula é " + n*(10/20)+"<br>");
